fixed spacing issues

--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,10 @@ body {
 }
 
 .top-bar {
-    margin-top: 5px;
+    margin: auto;
+    margin-top: 20px;
+    margin-bottom: 125px;
+    max-width: 1100px;
 }
 
 .try-button {
@@ -52,6 +55,8 @@ body {
     cursor: pointer;
     float: right;
     font-weight: 500;
+    margin-right: 50px;
+    margin-top: 2px;
     padding: 5px 10px;
     
 }
@@ -66,6 +71,7 @@ body {
 .header {
     margin: auto;
     max-width: 1000px;
+    padding-bottom: 50px;
 }
 
 .header-h1 {
@@ -84,36 +90,35 @@ body {
     text-align: center;
 }
 
-.header-button {
-    margin-top: 20px;
+.get-started-button {
+    margin-top: 40px;
     margin-bottom: 50px;
 }
 
-.header-button button {
+.get-started-button button {
     background: hsl(322,100%,66%);
     border: none;
     border-radius: 22px;
     box-shadow: 0px 2px 13px 2px rgba(0, 0, 0, 0.2);
     color: #ffffff;
     cursor: pointer;
-    font-weight: 600;
     font-size: .8rem;
     line-height: 1.5;
-    padding: 13px 35px;
+    padding: 13px 80px;
     text-decoration: none;
 }
 
-.header-button button:hover{
+.get-started-button button:hover{
     background: hsl(322,100%,60%);
     box-shadow: 0px 5px 16px 5px rgba(0, 0, 0, 0.5);
 }
 
-/* 2nd Section */
+/* Section 2*/
 
 .section-two {
     margin: auto;
     max-width: 1000px;
-    margin-bottom: 100px;
+    margin-bottom: 25px;
 }
 
 .image-div {
@@ -122,6 +127,7 @@ body {
 
 .image-div img {
     max-width: 800px;
+    margin-bottom: 75px;
 }
 
 .col-6 {
@@ -151,6 +157,8 @@ body {
 .section-two--text {
     color: rgba(0, 0, 0, 0.5);
 }
+
+/* Section 3 */
 
 
 
